# cloze-deleter

./: README.md  cloze-deleter.cabal  poem-thing.cabal  stack.yaml
src/: Main.hs
