name:                cloze-deleter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/branweb1/cloze-deleter#readme
license:             BSD3
license-file:        LICENSE
author:              Brandon Webster
maintainer:          branweb1@gmail.com
copyright:           2020 Brandon Webster
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cloze
  hs-source-dirs:      src
  ghc-options:         -threaded
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , brick
                       , random
                       , vty
